--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 node_js:
 - 10.16.3
 if: branch = master
+before_install:
+  - openssl aes-256-cbc -K $encrypted_1d9f41e8d761_key -iv $encrypted_1d9f41e8d761_iv -in secret.json.enc -out secret.json -d
 deploy:
   provider: heroku
   api_key:
