--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ if: branch = master
 before_install:
   - openssl aes-256-cbc -K $encrypted_1d9f41e8d761_key -iv $encrypted_1d9f41e8d761_iv -in secret.json.enc -out secret.json -d
 deploy:
+  skip_cleanup: true
   provider: heroku
   app: stalker-bot-discord
   on: master
